fix(large-video): do not stretch dominant speaker avatar

--- a/css/_videolayout_default.scss
+++ b/css/_videolayout_default.scss
@@ -514,6 +514,7 @@
 }
 #dominantSpeakerAvatar {
     background-color: #000000;
+    object-fit: cover;
 }
 
 .dynamic-shadow {
